<resources>

    <string name="app_name">Android Tech Challenge</string>
    <string name="login_market_title">MARKETİM</string>
    <string name="hint_username">Kullanıcı Adı</string>
    <string name="hint_password">Şifre</string>
    <string name="rememberMe">Beni Hatırla</string>
    <string name="login">Giriş</string>
    <string name="error_username">Lütfen kullanıcı adını doldurunuz.</string>
    <string name="error_password">Lütfen şifre alanını doldurunuz.</string>
    <string name="error_validation">Kullanıcı adı ya da şifre hatalı.</string>
    <string name="app_title">Marketim</string>
    <string name="btn_orders">Siparişlerim</string>
    <string name="logout">Çıkış Yap</string>
    <string name="quit_cancel">Vazgeç</string>
    <string name="logout_yes">İstiyorum</string>
    <string name="logout_message">Çıkış yapmak istiyor musunuz ?</string>
    <string name="orders_loading">Siparişler Yükleniyor</string>
</resources>
