<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">
    <TextView
            android:id="@+id/tv_login_market_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/appThemeRed"
            android:text="@string/login_market_title"
    />
    <com.example.androidtechchallenge.custom.CustomTextInputLayout
            android:id="@+id/til_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:paddingBottom="10dp"
            app:hintEnabled="false"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/error_appearance"
            app:layout_constraintBottom_toTopOf="@id/til_login_password"
    >
        <EditText
                android:id="@+id/et_login_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_login_edittext"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/loginPageGray"
                android:textSize="16sp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:paddingLeft="20dp"
                android:hint="@string/hint_username"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="10dp"

        />
    </com.example.androidtechchallenge.custom.CustomTextInputLayout>
    <com.example.androidtechchallenge.custom.CustomTextInputLayout
            android:id="@+id/til_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:hintEnabled="false"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/error_appearance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"

    >
        <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_login_edittext"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/loginPageGray"
                android:textSize="16sp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:paddingLeft="20dp"
                android:hint="@string/hint_password"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="10dp"
        />
    </com.example.androidtechchallenge.custom.CustomTextInputLayout>


    <Switch
            android:id="@+id/sw_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/til_login_password"
            app:layout_constraintTop_toBottomOf="@id/til_login_password"
            android:layout_marginTop="12dp"
            android:paddingLeft="4dp"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:paddingRight="4dp"
            android:background="@drawable/shape_switch_border"
            android:track="@android:color/transparent"
            android:thumb="@drawable/shape_thumb"
            android:switchMinWidth="40dp"
    />
    <TextView
            android:id="@+id/tv_login_rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/sw_login"
            app:layout_constraintStart_toEndOf="@id/sw_login"
            app:layout_constraintBottom_toBottomOf="@id/sw_login"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:textSize="13sp"
            android:textColor="@color/thumbDark"
            android:text="@string/rememberMe"
    />

    <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sw_login"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/shape_login_button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:textColor="@color/white"
    />


</androidx.constraintlayout.widget.ConstraintLayout>