<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrdersActivity"
        android:background="@color/white">
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/appThemeRed">
        <TextView
                android:id="@+id/tv_app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/app_title"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textColor="@color/white"/>
    </androidx.appcompat.widget.Toolbar>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_orders"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_orders"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_order"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    <Button
            android:id="@+id/btn_orders"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_logout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shape_order_button"
            android:textAllCaps="false"
            android:textColor="@color/appThemeRed"
            android:textSize="14sp"
            android:text="@string/btn_orders"/>
    <Button
            android:id="@+id/btn_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_orders"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shape_login_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/logout"/>
</androidx.constraintlayout.widget.ConstraintLayout>